--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,53 @@
-.main-container {
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+/* .main-container {
   margin: 0;
   font-family: Arial, sans-serif;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: white;
   text-align: center;
   overflow: hidden;
   position: relative;
+} */
+
+.bangers-regular {
+  font-family: "Bangers", system-ui;
+  font-weight: 400;
+  font-style: normal;
 }
 
-/* Background image layer */
-.main-container::before {
+
+/* .main-container::before {
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('./assets/itachi.png'); /* Replace with your image path */
+  background-image: url('./assets/itachi.png'); 
   background-size: cover;
   background-position: center;
   z-index: -2;
-  /* filter: grayscale(100%); */
+  filter: grayscale(80%);
+} */
+
+/* Add these styles to your CSS file */
+.sliding-pane-float {
+  position: fixed;
+  top: 10%;
+  left: 10%;
+  width: 80%;
+  max-width: 300px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  height: 10vh;
 }
 
-/* Overlay for duotone effect */
+.sliding-pane{
+  height: 5vh;
+}
+
+
 .main-container::after {
   content: '';
   position: absolute;
@@ -34,8 +55,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to top right, #3d3d3d, #424242); /* Duotone colors */
+  background: linear-gradient(to top right, #000000, #000000);
   mix-blend-mode: multiply;
-  opacity: 2; /* Adjust the opacity for desired effect */
+  opacity: 0.5;
   z-index: -1;
 }
+
